<resources>
    <string name="app_name">Logopediapp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_up">Registrati</string>
    <string name="action_next">Avanti</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="welcome">Benvenuto !</string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">Password non valida</string>
    <string name="login_failed">"impossibile accedere"</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">AVANTI</string>
    <string name="skip">SALTA</string>
    <string name="start">HO CAPITO</string>

    <string name="slide_1_title">Correggi!</string>
    <string name="slide_1_desc">Correggi le risposte agli esercizi del tuo bambino, in contemporanea al loro svolgimento!</string>

    <string name="slide_2_title">Customizza!</string>
    <string name="slide_2_desc">Customizza scenari di gioco, personaggi giocabili e ricompense, per far sì che l\'app incontri i gusti del tuo bambino!</string>

    <string name="slide_3_title">Monitora!</string>
    <string name="slide_3_desc">Monitora i miglioramenti del tuo bambino con l\'aiuto di grafici, registrazioni audio e classifiche!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="insert_doctor_code">Inserisci qui il codice univoco di accesso fornito dal tuo medico curante!</string>
    <string name="hint_code">Codice Paziente</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="end">Fine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Homepage</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="appuntamenti">Appuntamenti</string>
    <string name="ricompense">Ricompense</string>
    <string name="scenario">Personalizza scenario</string>
    <string name="settings">Impostazioni</string>
    <string name="logout">Logout</string>
    <string name="no_internet">No internet!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">loading...</string>
    <string name="nav_home">Homepage</string>
    <string name="nav_appuntamenti">Appuntamenti</string>
    <string name="nav_settings">Impostazioni</string>
    <string name="save">Salva</string>


    <!-- Main screen -->
    <string name="activity_main_vertical_linear_sample_button">Vertical Linear Sample</string>
    <string name="activity_main_horizontal_linear_sample_button">Horizontal Linear Sample</string>
    <string name="activity_main_grid_sample_button">Grid Layout Sample</string>
    <string name="activity_main_header">Expanding RecyclerView</string>
    <string name="coming_soon">Feature coming soon</string>

    <!-- Linear sample -->
    <string name="activity_vertical_linear_sample_title">Vertical Linear Sample</string>
    <string name="activity_horizontal_linear_sample_title">Horizontal Linear Sample</string>
    <string name="toolbar_sample_checkBox">Custom Expand Button</string>
    <string name="child_text">Child %1$d</string>
    <string name="second_child_text">Child %1$d_2</string>
    <string name="third_child_text">Child %1$d_3</string>
    <string name="child_insert_text">Child of inserted #%1$d</string>
    <string name="parent_text">Parent %1$d</string>
    <string name="inserted_parent_text">Inserted Parent</string>
    <string name="arrow_contentDescription">Expand list item arrow</string>
    <string name="item_expanded">Item %1$d expanded</string>
    <string name="item_collapsed">Item %1$d collapsed</string>
    <string name="expand_parent_two">Expand parent 2</string>
    <string name="collapse_parent_two">Collapse parent 2</string>
    <string name="expand_all">Expand all parents</string>
    <string name="collapse_all">Collapse all parents</string>
    <string name="add_item_to_end">Add parent to end</string>
    <string name="remove_item_from_end">Remove parent from end</string>
    <string name="add_item_at_pos_two">Add parent @ pos 1</string>
    <string name="remove_second_pos">Remove parent @ pos 1</string>
    <string name="add_child">Add child to end of 2nd parent</string>
    <string name="remove_child">Remove child on 2nd parent from pos 1</string>
    <string name="added_child">Child Addition %1$d</string>
    <string name="add_multiple_parents">Add 2 Parents @ pos 1</string>
    <string name="modify_last_parent">Modify last Parent</string>
    <string name="modify_last_child">Modify last Child</string>
    <string name="modified_parent_text">modified %1$d</string>
    <string name="modified_child_text">modified Child %1$d</string>
    <string name="expand_range">Expand parents 4–6</string>
    <string name="collapse_range">Collapse parents 2–5</string>
    <string name="add_two_children">Add two children to last parent</string>
    <string name="remove_two_children">Remove two children from last parent</string>
    <string name="modify_two_children">Modify two children from last parent</string>
    <string name="remove_two_parents">Remove last two Parents</string>
    <string name="modify_two_parents">Modify last two Parents</string>
    <string name="parent_move">Move parent @ pos 1 to pos 3</string>
    <string name="child_move">On Parent @ pos 1, move child from pos 0 to end</string>


    <string name="collapsed">collapsed: %s</string>
    <string name="expanded">expanded: %s</string>


    <!-- Sample Toolbar -->
    <string name="no_animation">No animation</string>
    <string name="spinner_adapter_time_s">1 s</string>
    <string name="spinner_adapter_time_ms">%1$d ms</string>
    <string name="title_activity_svolgimento">SvolgimentoActivity</string>

</resources>
