<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:id="@+id/linearLayout"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FAFAFA"
        card_view:cardCornerRadius="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"



        >




        <RelativeLayout
            android:id="@+id/parentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_container"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/username"
                    android:hint="@string/prompt_email"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pass_container"
                android:layout_marginTop="80dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:hint="@string/prompt_password"
                    android:layout_below="@+id/email_container"
                    android:layout_marginBottom="100dp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:id="@+id/login"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/pass_container"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/divider"
                android:layout_below="@+id/login"
                android:orientation="horizontal">


                <View style="@style/Divider"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="oppure"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"/>
                <View style="@style/Divider"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <Button
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:id="@+id/signup"
                android:layout_below="@+id/divider"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_alignRight="@+id/login"
                android:layout_alignEnd="@+id/login"
                android:layout_alignLeft="@+id/login"
                android:layout_alignStart="@+id/login" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>