<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="#FAFAFA"
    card_view:cardCornerRadius="1dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="10dp"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <LinearLayout

                android:id="@+id/layoutuploadimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/img_width_height"
                    android:layout_height="@dimen/img_width_height"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#009688"
                    android:src="@drawable/ic_food" />

                <TextView

                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingLeft="@dimen/desc_padding"
                    android:paddingRight="@dimen/desc_padding"
                    android:text="@string/insert_doctor_code"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/slide_desc" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_container"
                    android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/doctor_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="100dp"
                    android:ems="10"
                    android:hint="@string/hint_code" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@android:color/white"
                android:enabled="true"
                android:text="@string/action_next"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>